[project]
name = "comfyui-simplecounter"
description = "A simple counter, when pressing 'Queue Prompt' resets the count."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/AonekoSS/ComfyUI-SimpleCounter"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "AonekoSS"
DisplayName = "ComfyUI-SimpleCounter"
Icon = ""
